Add platform gateway on boarding and api deployment support to on-prem APIM
